@@ -13,7 +13,7 @@ WIDTH, HEIGHT = 80, 60
 console = tdl.init(WIDTH, HEIGHT)
 
 # the scrolling text window
-textWindow = tdl.Window(console, 0, 0, WIDTH, HEIGHT-2)
+textWindow = tdl.Window(console, 0, 0, WIDTH, -2)
 
 # slow down the program so that the user can more clearly see the motion events
 tdl.setFPS(24)
