@@ -1,3 +1,10 @@
+ 
+ * Fixed the clear method on Window class
+ * Fixed screenshot function
+ * Fixed some drawing operations with unchanging backgrounds
+ * Instances of Console and Noise can be pickled and copied
+ * Added KeyEvent.keychar
+
 1.1.3
  * Some of the setFont parameters were incorrectly labeled and documented
  * setFont can auto-detect tilesets if the font sizes are in the filenames
